--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,9 @@
   "extends": "next/core-web-vitals",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
-    "import/no-unresolved": "error",
+    "@typescript-eslint/no-unused-vars": "off",
+    "import/no-unresolved": "off",
     "import/named": "off",
-    "no-console": "warn"
+    "no-console": "off"
   }
 }
