--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "import/no-unresolved": "off",
     "import/named": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
